[project]
name = "let_flownet"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "opencv-python==4.13.0.92",
    "tensorboardX==2.6.4",
    "einops==0.6.1",
    "numpy==2.4.2",
    "h5py==3.15.1",
    "protobuf==3.20.0",
    "pybind11==3.0.1",
    "six==1.17.0",
    "pip==25.3",
    "uv==0.9.15",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling",]
build-backend = "hatchling.build"
